# tilt-bse-dashboard

./: .env.example  .gitignore  .vercelignore  BOOTSTRAP.md  CLAUDE.md  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
.claude/agents/: backtest-runner.md  data-fetcher.md
.claude/commands/: backtest.md  morning-summary.md  portfolio-status.md  scan-sectors.md
data/: mock_portfolio.json  mutual_fund_holdings.csv
data/llm_cache/: market_read_____2026-03-27__c20602e09c008057.json  market_read_____2026-05-26__d606d23004f9ecca.json  thesis__PERSISTENT__2026-03-27__0d9a369ef488c22e.json  thesis__RELIANCE__2026-05-26__2a14ca1e99a63b38.json  thesis_short__AUROPHARMA__2026-03-27__6e9802f716f0a6f5.json  thesis_short__AXISBANK__2026-05-26__d97a46a04c7b8f93.json  thesis_short__DIVISLAB__2026-05-26__5f4e54e915faebae.json  thesis_short__DLF__2026-03-27__5013a928ca791110.json  thesis_short__HCLTECH__2026-03-27__f432ef10ddf97528.json  thesis_short__HDFCBANK__2026-05-26__5b86295c471335d6.json  thesis_short__IDFCFIRSTB__2026-03-27__6a6e10e0f1af0410.json  thesis_short__INFY__2026-03-27__3b9ad8f08ef01924.json  thesis_short__INFY__2026-05-26__a57a2d9837de9c90.json  thesis_short__TCS__2026-03-27__1218481e5112d40c.json
data/snapshot/: 360ONE.parquet  ADANIPORTS.parquet  ANGELONE.parquet  APOLLOHOSP.parquet  ASHOKLEY.parquet  ASIANPAINT.parquet  AUBANK.parquet  AUROPHARMA.parquet  AXISBANK.parquet  BAJAJ-AUTO.parquet  BAJAJFINSV.parquet  BAJFINANCE.parquet  BANKBARODA.parquet  BHARTIARTL.parquet  BHEL.parquet  BPCL.parquet  BRITANNIA.parquet  BSE.parquet  CANBK.parquet  CDSL.parquet  CIPLA.parquet  COALINDIA.parquet  COLPAL.parquet  DABUR.parquet  (+70 more)
docs/: CLAUDE_DESIGN_PROMPT.md  CLAUDE_DESIGN_PROMPT_V3.md  DEMO_STORYBOARD.md  LANES_EXPLAINED.md  SPEC.md  V3_PLAN.md
frontend/: README.md  api.js  app.jsx  build-marker.txt  chrome.jsx  data.js  data.jsx  icons.jsx  index.html  primitives.jsx  screen-backtest.jsx  screen-dashboard.jsx  screen-portfolio.jsx  screen-scan.jsx  screen-stock.jsx  screen-today.jsx
scripts/: capture_snapshot.py
tilt/: __init__.py
(+87 files in other folders)
