[project]
name = "tilt"
version = "0.1.0"
description = "Read-only market intelligence dashboard for Indian equities."
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py312"
# Anchor exclusions to the project root with a leading slash — bare "data"
# would also match our `tilt/data/` package and silently skip it.
extend-exclude = ["/data", "/docs", "/frontend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -m 'not integration'"
markers = [
    "integration: live-network tests; opt in with `pytest -m integration`",
]
